assets/css/style.css
/* ... */
.table th {
  font-size: 1em;
}

.table tr th {
  border-top: none;
  border-bottom: none;
  color: #fafafa;
  padding: 8px;
}

.table tr td {
  border-top: none;
  color: rgba(228, 30, 30, 0.9);
  padding: 8px;
}

.table tr td i {
  color: #fafafa;
}

table a {
  text-decoration: none;
  color: #fafafa;
}

table a:hover {
  text-decoration: none;
  color: #fafafa;
}
/* 50% Cell border concept adapted from https://stackoverflow.com/questions/32265322/css-length-of-border-bottom */

.table tr td::after {
  content: " ";
  position: absolute;
  display: block;
  left: 25%;
  width: 50%;
  bottom: 0;
  border-bottom: 2px solid #fafafa;
}

.table tr th::after {
  content: " ";
  position: absolute;
  display: block;
  left: 25%;
  width: 50%;
  bottom: 0;
  border-bottom: 2px solid #fafafa;
}

table p {
    padding: 0;
    margin: 0;
}

/* Price Table Modal */

.price-table-modal {
  background: black;
  border: none;
  border-radius: 0;
  color: #fafafa;
  overflow-y:auto;
}

.price-table-modal fieldset {
  padding-bottom: 0px;
}

.modal-content {
  border: none;
  border-style: none;
  border-radius: 0;
}

.price-table-modal .price-table-heading {
  padding-top: 10px;
}

.price-table-modal .table th {
  font-size: 1em;
}

.close-modal-button {
  margin: auto;
  font-weight: 700;
}

.modal-footer {
  border: none;
  border-style: none;
  border-radius: 0;
  padding-top: 0;
  display: block;
  width: 100%;
  text-align: center;
}

.modal-link {
  text-decoration: underline;
  -webkit-text-decoration-color: rgba(228, 30, 30, 0.9);
  text-decoration-color: rgba(228, 30, 30, 0.9);
  -webkit-text-decoration-style: double;
  text-decoration-style: double;
  color: #fafafa;
}

.modal-link:hover {
  text-decoration: underline;
  -webkit-text-decoration-color: rgba(228, 30, 30, 0.9);
  text-decoration-color: rgba(228, 30, 30, 0.9);
  -webkit-text-decoration-style: double;
  text-decoration-style: double;
  color: rgba(228, 30, 30, 0.9);
}

/* Thank You Modal */

.thank-you-modal {
  background: black;
  border: none;
  color: #fafafa;
}

.thank-you-heading {
  padding-top: 25px;
  padding-bottom: 5px;
  margin: 0;
  color: rgba(228, 30, 30, 0.9);
  display: block;
  width: 100%;
  text-align: center;
}

.thank-you-body {
  font-weight: 600;
  text-align: center;
}

/************************************************************* Footer */

.footer {
  /* 'Lava' render from Gimp Software (www.gimp.com) */
  background: url("../images/banner-background.jpg") black no-repeat center
    center fixed;
  background-size: cover;
  height: 75px;
  padding: 0;
}

/* Radial gradient (centre transparent, outer black) */
/* https://www.quirksmode.org/css/images/position.html */
.footer-gradient {
  background: -o-radial-gradient(at bottom, transparent 0%, black 70%);
  background: radial-gradient(at bottom, transparent 0%, black 70%);
  padding: 0;
}

.footer .row {
  height: inherit;
  width: 100%;
  margin: 0;
}

.personal-logo {
}

.enquire-footer {
  padding: 0;
}

.socials i {
  padding-left: 10px;
  padding-right: 10px;
  font-size: 1.6em;
  color: #fafafa;
}

.personal-logo i,
.personal-logo a {
  color: #fafafa;
}

.personal-logo i:hover,
.personal-logo a:hover {
  color: #fafafa;
  text-decoration: none;
}

.personal-logo,
.enquire-footer,
.socials {
  color: #fafafa;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.socials {
  padding-left: 5px;
  padding-right: 5px;
  flex-wrap: wrap;
}

.socials-pair-one,
.socials-pair-two {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: block;
  justify-content: center;
  align-content: center;
}
/* ... */

